Added more functionality

--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/webpack-env": "^1.18.0",
+    "webpack": "^5.74.0"
   }
 }
