--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "object-yard",
   "version": "0.1.0",
+  "homepage": "https://conorwalsh18.github.io",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +49,7 @@
   },
   "devDependencies": {
     "@types/webpack-env": "^1.18.0",
+    "gh-pages": "^4.0.0",
     "webpack": "^5.74.0"
   }
 }
